# CNC

./: .gitignore  ReadMe.md  cnc_main.py  config_params.py  config_template.py  frame_handler.py  nc_edit_config.py  nc_get_config.py  network_map.py  process_switch_config.py  pyproject.toml  requirements.txt  setup.txt  sniff_lldp.py  traffic_shaper.py  tsn_config_xml.py
bridge_discovery/: frame_handler.py  process_switch_config.py  sniff_lldp.py
deprecated/: async_timer.py  cache.py  get_lldp.py
gui/: gui.py
netconf_helper/: nc_edit_config.py  nc_get_config.py  tsn_config_xml.py
setup/: client.sh  client.txt  conf.md  conf.py  connection_test.py  server.sh  server.txt
test/: nw_map_test_data.py  test_timer.py
