[tool.poetry]
name = "cnc"
version = "0.1.0"
description = "CNC controller for TSN network"
authors = ["Your Name <you@example.com>"]
readme = "ReadMe.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
loguru = "^0.7.2"
scapy = "^2.5.0"
xmltodict = "^0.13.0"
pydantic = "^2.6.3"
ncclient = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
